fix contrast

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -77,7 +77,7 @@ h5,
 h6,
 .h5,
 .h6 {
-  font-size: 18px;
+  font-size: 16px;
 }
 p, li, a, span, blockquote {
   font-family: 'Lato', sans-serif;
